prevent word from jumping around

--- a/www/css/index.css
+++ b/www/css/index.css
@@ -3,15 +3,9 @@
  * This software is licensed under the MIT license. A copy of the license
  * should have been included with this software.
  */
-* {
-    -webkit-touch-callout: none;                /* prevent callout to copy image, etc when tap to hold */
-    -webkit-text-size-adjust: none;             /* prevent webkit from resizing text to fit */
-    -webkit-tap-highlight-color: rgba(0,0,0,0); /* make transparent link selection, adjust last value opacity 0 to 1.0 */
-    -webkit-user-select: none;                  /* prevent copy paste, to allow, change 'none' to 'text' */
-}
 
 .card {
-    font-size: 24px;
+	font-size: 24px;
 	text-align: center;
 	position: absolute;
 	top: 50%;
